--- a/DesignYourself/DesignYourself/Views/Pages/TaskSolvingPage/index.html
+++ b/DesignYourself/DesignYourself/Views/Pages/TaskSolvingPage/index.html
@@ -40,8 +40,8 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" >Exit</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="onStartSolving('#collapseTaskDescription')">Start solving</button>
+                <button type="button" class="btn btn-secondary" id="exitButton" data-dismiss="modal" >Exit</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" id="solvingButton">Start solving</button>
             </div>
         </div>
     </div>
