--- a/DesignYourself/DesignYourself/ClientApp/DesignYourself/style.css
+++ b/DesignYourself/DesignYourself/ClientApp/DesignYourself/style.css
@@ -17,7 +17,10 @@
   border-color: #fff;
   box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
 }
-
+.row1 {
+  padding-left: 30%;
+  width: 70%;
+}
 .bi {
   vertical-align: -.125em;
   fill: currentColor;
@@ -68,7 +71,7 @@ small {
     color: #619e85;
 }
 
-.row {
+.row1 {
   padding-left: 30%;
   width: 70%;
 }
@@ -125,3 +128,4 @@ small {
     /* Decorative .. */
     min-height: 40px;
 }
+
